# ic

./: fichamento.md  monocomponent_isotherms.py  newpso.py  pyproject.toml  to-do.MD
coiso/: cluster_pso_cpu.py  cluster_pso_gpu.py  monocomponent_isotherms.py
drafts/: func-de-erro.md
evandro/: full_cpu.py  novo_cuda.py
parelelismo/: main.py  novo_cuda.py
