[tool.poetry]
name = "ic"
version = "0.1.0"
description = ""
authors = ["SpackiGabriel <ifprgabriel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.8"
numpy = "^2.1.3"
cupy-cuda12x = "^13.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
